if(WIN32)
	add_subdirectory(d3d11)
	add_subdirectory(opengl)
	add_subdirectory(empty)
	add_subdirectory(custom)
endif()

if(UNIX)
	if(APPLE)
		add_subdirectory(metal)
		add_subdirectory(empty)
		add_subdirectory(custom)
	else()
		add_subdirectory(opengl)
		add_subdirectory(empty)
		add_subdirectory(custom)
	endif()
endif()
